Mon Mar  7 10:01:34 2005  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Documented both changes below.

        * modules/ProjectCreator.pm:

          Added a new operator, '>>' to allow user to specify multiple
          unrelated (file name wise) output files based on a custom input
          file.

        * templates/em3vcp.mpd:
        * templates/ghs.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          If a custom defintion does not have an output extension specified,
          you can list custom input files, but they will not be compiled
          or processed.  In the above graphical tools they will be
          listed/displayed and excluded from the build.

Fri Mar  4 12:03:48 2005  Chad Elliott  <elliott_c@ociweb.com>

        * config/boost_regex.mpb:

          Turn off Windows automatic linking.

        * config/global.features:
        * modules/FeatureParser.pm:

          Fixed the comment about the -features option.

        * modules/TemplateParser.pm:

          Added the ability to use 'dirname' in an if statement
          and 'noextension' and 'normalize' in a foreach statement.

        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added the ability to have multiple cpp files with the same name
          (in different directories) in a project.  Now, if an input source
          file has a directory, the object file is placed in a similar
          directory structure underneath the intermediate file directory.

        * templates/makedll.mpt:

          Changed the default for SunCC, aCC, xlC_r and SGICC to 64-bit.
          Provided a 32-bit version of each of these.

Thu Mar  3 12:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/bmake.mpd:
          Only use mkdir to create a directory when it not exist yet.
